--- a/IS1113_Web_Dev/Week 1/index.html
+++ b/IS1113_Web_Dev/Week 1/index.html
@@ -1,3 +1,17 @@
-<h1>Welcome to My Website</h1>
-<h4>Subtitle Here</h4>
-<p>This is a paragraph.</p>
+<!DOCTYPE html>
+<!-- This is my first project in the IS1113 class -->
+<html>
+    <head>
+        <title>XHTML: Lab2 Exercise</title>
+    </head>
+
+    <body>
+        <h1 align="center">Welcome to our Web Site</h1>
+        <p>We have learned in this lab how to organise our content using the heading tags and the paragraph tags. These tags give structure to our document, thus making it easier for the user to read.</p>
+        <h2 align="center">Headings — The Types We Use</h2>
+        <p align="center">Heading tags range from the H1 tag to the H6 tag and indicate the importance of each tag. To indicate this importance, they render text very large (for H1) down to very small (for H6)</p>
+        <h3>Attributes</h3>
+        <p>Quite a few of the tags we will use have different attributes which we will allow us to achieve different presentations of our text.</p>
+    </body>
+
+</html>
