--- a/IS1113_Web_Dev/Projects/Project 1 — CV/page3.html
+++ b/IS1113_Web_Dev/Projects/Project 1 — CV/page3.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 
-<!-- Work Experience Details -->
 <html lang="en">
 
 <head>
 
-    <title>Daniel Marcinkowski — CV, Work Experience Details</title>
+    <title>Daniel Marcinkowski — CV, Personal Details</title>
     <meta name="description" content="Business Information Systems Student | Experienced Marketing Manager">
     
     <!-- Figtree Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-
-    <style>
+    
+    <!-- CSS Styling -->
+    <style> 
         .figtree-font {
             font-family: "Figtree", sans-serif;
             font-optical-sizing: auto;
@@ -22,66 +22,110 @@
         } 
         body {
             font-family: "Figtree", sans-serif;
-            margin: 20px;
+            max-width: 640px;
+            margin: 0 auto;
+            padding: 20px;
         }
         h1, h3 {
             font-weight: 600;
             color: #EAAA00;
+        }
+        h1 {
+            text-align: center;
+        }
+        h2 {
+            font-weight: 500;
+            text-align: center;
+        }
+        h4 {
+            text-align: center;
+        }
+        a {
+            color: #EAAA00;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        nav {
+            font-size: 14px;
+        }
+        .experience {
+            margin-bottom: 24px;
         }
     </style>
 
 </head>
 
 <body>
-    <h1>Daniel Marcinkowski</h1>
-    <h2>Business Information Systems Student | Experienced Marketing Manager</h2>
-    <h3>Work Experience</h3>
-    <div class="experience">
-        <p><strong>Senior Marketing Manager at Ready Player Me; Berlin, Germany — Jan 2021 – Nov 2024</strong></p>
-        <ul>
-            <li>Spearheaded the company’s product marketing and messaging strategy, scaling the game developer tools user base from 25 to 20,000+.</li>
-            <li>Built and executed social media strategies, increasing Twitter and LinkedIn followers 10x.</li>
-            <li>Created full-funnel content assets: blog articles, email campaigns, podcast series, video.</li>
-            <li>Led SEO initiatives, increasing referring domains by 25x and driving organic traffic growth.</li>
-            <li>Built and nurtured a developer community of 15,000+ on Discord; hosted virtual and in-person events, including a 1,000+ attendee event in NYC.</li>
-            <li>Collaborated cross-functionally with product, design, and leadership teams to ensure marketing alignment with product roadmap.</li>
-            <li>Presented KPIs and campaign results to executive leadership; contributed to strategic marketing planning and quarterly OKRs.</li>
-        </ul>
-     </div>
-     <div class="experience">
-        <p><strong>Digital Marketing Specialist, ACELR8; Berlin, Germany — Mar 2019 – Dec 2020</strong></p>
-        <ul>
-            <li>Developed B2B demand generation and brand positioning strategies for Berlin’s startup recruitment space.</li>
-            <li>Managed and optimised LinkedIn and social media growth (10x increase); ensured consistent brand messaging.</li>
-            <li>Produced and distributed thought leadership content across blogs, podcasts, and video formats.</li>
-            <li>Planned and hosted events with 1,500+ HR professionals to increase brand engagement and lead generation.</li>
-        </ul>
+
+    <!-- Navigation -->
+    <div id="nav-bar">
+        <nav>
+            <a href="page1.html" target="_blank">Personal Details</a>
+                &nbsp;|&nbsp;
+            <a href="page2.html" target="_blank">Education</a>
+                &nbsp;|&nbsp;
+            <a href="page3.html" target="_blank">Work Experience</a>
+        </nav>
+        <hr style="opacity: 0.25; margin-top: 12px;">
     </div>
-        <p><strong>Content & Community Manager, Phase Software; Berlin, Germany — May 2018 – Feb 2019</strong></p>
-        <ul>
-            <li>Led go-to-market content strategy for a UI/UX design tool and drove early user engagement.</li>
-            <li>Built and scaled a Slack community of 2,500+ designers to foster product feedback and brand advocacy.</li>
-            <li>Co-created content partnerships and launched a digital magazine with 10,000+ monthly views.</li>
-            <li>Managed end-to-end content lifecycle: ideation, creation, publishing, and analytics.</li>
-        </ul>
+
+    <!-- Name & Title -->
+    <div id="header">
+        <h1><a href="page1.html">Daniel Marcinkowski</a></h1>
+        <h4>Business Information Systems Student | Experienced Marketing Manager</h4>
     </div>
-    <div class="experience">
-        <p><strong>Social Media Specialist, Daftcode; Warsaw, Poland — Aug 2016 – Jun 2018</strong></p>
-        <ul>
-            <li>Developed integrated marketing strategies for five B2C/B2B ventures.</li>
-            <li>Executed and optimised paid campaigns across Facebook, Twitter, Instagram, and LinkedIn Ads, achieving targeted acquisition goals.</li>
-            <li>Created copy and multimedia content for web and social platforms; aligned with customer segmentation strategies.</li>
-            <li>Partnered with designers and videographers to test ad formats, creative variations, and CTA optimisation.</li>
-        </ul>
+
+    <!-- Work Experience Section -->
+    <div id="work-experience">
+        <h3>Work Experience</h3>
+        <div class="experience">
+            <p><strong>Senior Marketing Manager at Ready Player Me; Berlin, Germany — Jan 2021 – Nov 2024</strong></p>
+            <ul>
+                <li>Spearheaded the company’s product marketing and messaging strategy, scaling the game developer tools user base from 25 to 20,000+.</li>
+                <li>Built and executed social media strategies, increasing Twitter and LinkedIn followers 10x.</li>
+                <li>Created full-funnel content assets: blog articles, email campaigns, podcast series, video.</li>
+                <li>Led SEO initiatives, increasing referring domains by 25x and driving organic traffic growth.</li>
+                <li>Built and nurtured a developer community of 15,000+ on Discord; hosted virtual and in-person events, including a 1,000+ attendee event in NYC.</li>
+                <li>Collaborated cross-functionally with product, design, and leadership teams to ensure marketing alignment with product roadmap.</li>
+                <li>Presented KPIs and campaign results to executive leadership; contributed to strategic marketing planning and quarterly OKRs.</li>
+            </ul>
+        </div>
+        <div class="experience">
+            <p><strong>Digital Marketing Specialist, ACELR8; Berlin, Germany — Mar 2019 – Dec 2020</strong></p>
+            <ul>
+                <li>Developed B2B demand generation and brand positioning strategies for Berlin’s startup recruitment space.</li>
+                <li>Managed and optimised LinkedIn and social media growth (10x increase); ensured consistent brand messaging.</li>
+                <li>Produced and distributed thought leadership content across blogs, podcasts, and video formats.</li>
+                <li>Planned and hosted events with 1,500+ HR professionals to increase brand engagement and lead generation.</li>
+            </ul>
+        </div>
+            <p><strong>Content & Community Manager, Phase Software; Berlin, Germany — May 2018 – Feb 2019</strong></p>
+            <ul>
+                <li>Led go-to-market content strategy for a UI/UX design tool and drove early user engagement.</li>
+                <li>Built and scaled a Slack community of 2,500+ designers to foster product feedback and brand advocacy.</li>
+                <li>Co-created content partnerships and launched a digital magazine with 10,000+ monthly views.</li>
+                <li>Managed end-to-end content lifecycle: ideation, creation, publishing, and analytics.</li>
+            </ul>
+        </div>
+        <div class="experience">
+            <p><strong>Social Media Specialist, Daftcode; Warsaw, Poland — Aug 2016 – Jun 2018</strong></p>
+            <ul>
+                <li>Developed integrated marketing strategies for five B2C/B2B ventures.</li>
+                <li>Executed and optimised paid campaigns across Facebook, Twitter, Instagram, and LinkedIn Ads, achieving targeted acquisition goals.</li>
+                <li>Created copy and multimedia content for web and social platforms; aligned with customer segmentation strategies.</li>
+                <li>Partnered with designers and videographers to test ad formats, creative variations, and CTA optimisation.</li>
+            </ul>
+        </div>
+        <div class="experience">
+            <p><strong>Junior Moderator, Cheil Worldwide; Warsaw, Poland — May 2016 – Jul 2016 & Jul 2015 – Aug 2015</strong></p>
+            <ul>
+                <li>Managed Samsung Poland’s social media presence across Facebook, Twitter, and LinkedIn.</li>
+            </ul>
+        </div>
     </div>
-    <div class="experience">
-        <p><strong>Junior Moderator, Cheil Worldwide; Warsaw, Poland — May 2016 – Jul 2016 & Jul 2015 – Aug 2015</strong></p>
-        <ul>
-            <li>Managed Samsung Poland’s social media presence across Facebook, Twitter, and LinkedIn.</li>
-        </ul>
-    </div>
-    <a href="page1.html">Learn more about me</a>
-    &nbsp;|&nbsp;
-    <a href="page2.html">Learn more about my education</a>
+
 </body>
+
 </html>
