Updates to IS1113 CV project

--- a/IS1113_Web_Dev/Projects/Project 1 — CV/page2.html
+++ b/IS1113_Web_Dev/Projects/Project 1 — CV/page2.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Daniel Marcinkowski — CV, Personal Details</title>
+    <title>Daniel Marcinkowski — CV, Education Details</title>
     <meta name="description" content="Business Information Systems Student | Experienced Marketing Manager">
     
     <!-- Figtree Font -->
@@ -14,12 +14,6 @@
     
     <!-- CSS Styling -->
     <style> 
-        .figtree-font {
-            font-family: "Figtree", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 400;
-            font-style: normal;
-        } 
         body {
             font-family: "Figtree", sans-serif;
             max-width: 640px;
@@ -50,6 +44,10 @@
         nav {
             font-size: 14px;
         }
+        hr {
+            opacity: 0.25; 
+            margin-top: 12px;
+        }
     </style>
 
 </head>
@@ -59,13 +57,13 @@
     <!-- Navigation -->
     <div id="nav-bar">
         <nav>
-            <a href="page1.html" target="_blank">Personal Details</a>
+            <a href="page1.html">Personal Details</a>
                 &nbsp;|&nbsp;
-            <a href="page2.html" target="_blank">Education</a>
+            <a href="page2.html"><strong>Education</strong></a>
                 &nbsp;|&nbsp;
-            <a href="page3.html" target="_blank">Work Experience</a>
+            <a href="page3.html">Work Experience</a>
         </nav>
-        <hr style="opacity: 0.25; margin-top: 12px;">
+        <hr />
     </div>
 
     <!-- Name & Title -->
@@ -76,7 +74,7 @@
 
     <!-- Education Section -->
     <div id="education">
-    <h3>Education</h3>
+        <h3>Education</h3>
         <ul>
             <li>BSc Business Information Systems (University College Cork) — Sep 2025 – May 2029 (projected)
             </li>
