--- a/IS1113_Web_Dev/Projects/Project 1 — CV/page3.html
+++ b/IS1113_Web_Dev/Projects/Project 1 — CV/page3.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Daniel Marcinkowski — CV, Personal Details</title>
+    <title>Daniel Marcinkowski — CV, Work Experience</title>
     <meta name="description" content="Business Information Systems Student | Experienced Marketing Manager">
     
     <!-- Figtree Font -->
@@ -14,12 +14,6 @@
     
     <!-- CSS Styling -->
     <style> 
-        .figtree-font {
-            font-family: "Figtree", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 400;
-            font-style: normal;
-        } 
         body {
             font-family: "Figtree", sans-serif;
             max-width: 640px;
@@ -50,6 +44,10 @@
         nav {
             font-size: 14px;
         }
+        hr {
+            opacity: 0.25; 
+            margin-top: 12px;
+        }
         .experience {
             margin-bottom: 24px;
         }
@@ -62,13 +60,13 @@
     <!-- Navigation -->
     <div id="nav-bar">
         <nav>
-            <a href="page1.html" target="_blank">Personal Details</a>
+            <a href="page1.html">Personal Details</a>
                 &nbsp;|&nbsp;
-            <a href="page2.html" target="_blank">Education</a>
+            <a href="page2.html">Education</a>
                 &nbsp;|&nbsp;
-            <a href="page3.html" target="_blank">Work Experience</a>
+            <a href="page3.html"><strong>Work Experience</strong></a>
         </nav>
-        <hr style="opacity: 0.25; margin-top: 12px;">
+        <hr />
     </div>
 
     <!-- Name & Title -->
@@ -101,6 +99,7 @@
                 <li>Planned and hosted events with 1,500+ HR professionals to increase brand engagement and lead generation.</li>
             </ul>
         </div>
+        <div class="experience">
             <p><strong>Content & Community Manager, Phase Software; Berlin, Germany — May 2018 – Feb 2019</strong></p>
             <ul>
                 <li>Led go-to-market content strategy for a UI/UX design tool and drove early user engagement.</li>
