Add About and Home pages for Links Practice

--- a/IS1113_Web_Dev/Week 4/links_practice/index.html
+++ b/IS1113_Web_Dev/Week 4/links_practice/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Title</title>
     <meta charset="utf-8">
+    <title>Links Practice - Home</title>
   </head>
   <body>
-    <h1>Hello, World</h1>
+    <h1>Links Practice (Home)</h1>
+    <h2>External link (UCC)</h2>
+    <p><a href="https://www.ucc.ie/">Visit University College Cork</a></p>
+    <h2>Internal links</h2>
+    <p><a href="about.html">Go to About (same folder)</a></p>
+    <p><a href="pages/contact.html">Go to Contact (inside pages/)</a></p>
   </body>
 </html>
