Progress on the IS1113 Project

--- a/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/index.html
+++ b/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/index.html
@@ -21,19 +21,21 @@
 
     <!-- Navigation -->
     <nav>
-        <a href="page1.html"><strong>Personal Details</strong></a>
-            &nbsp;|&nbsp;
-        <a href="page2.html">Education</a>
-            &nbsp;|&nbsp;
-        <a href="page3.html">Work Experience</a>
+        <h3>Daniel Marcinkowski</h3>
+        <div class="links">
+            <a href="#professional-summary"><strong>About</strong></a>
+            &nbsp;&nbsp;&nbsp;
+            <a href="#education">Education</a>
+            &nbsp;&nbsp;&nbsp;
+            <a href="#work-experience">Work</a>
+        </div>
+        <button class="contact-button"><a href="#contact-info">Contact Me</a></button>
     </nav>
-    <hr />
 
     <!-- Header Section -->
     <header>
         <!-- Name & Title -->
         <section id="name-title">
-            <h1><a href="page1.html">Daniel Marcinkowski</a></h1>
             <h4>Business Information Systems Student | Experienced Marketing Manager</h4>
         </section>
 
@@ -83,7 +85,7 @@
         <article class="experience">
             <p><strong>Senior Marketing Manager at Ready Player Me; Berlin, Germany — Jan 2021 - Nov 2024</strong></p>
             <ul>
-                <li>Spearheaded the company’s product marketing and messaging strategy, scaling the game developer tools user base from 25 to 20,000+.</li>
+                <li>Spearheaded the company's product marketing and messaging strategy, scaling the game developer tools user base from 25 to 20,000+.</li>
                 <li>Built and executed social media strategies, increasing Twitter and LinkedIn followers 10x.</li>
                 <li>Created full-funnel content assets: blog articles, email campaigns, podcast series, video.</li>
                 <li>Led SEO initiatives, increasing referring domains by 25x and driving organic traffic growth.</li>
@@ -95,7 +97,7 @@
         <article class="experience">
             <p><strong>Digital Marketing Specialist, ACELR8; Berlin, Germany — Mar 2019 - Dec 2020</strong></p>
             <ul>
-                <li>Developed B2B demand generation and brand positioning strategies for Berlin’s startup recruitment space.</li>
+                <li>Developed B2B demand generation and brand positioning strategies for Berlin's startup recruitment space.</li>
                 <li>Managed and optimised LinkedIn and social media growth (10x increase); ensured consistent brand messaging.</li>
                 <li>Produced and distributed thought leadership content across blogs, podcasts, and video formats.</li>
                 <li>Planned and hosted events with 1,500+ HR professionals to increase brand engagement and lead generation.</li>
@@ -122,10 +124,11 @@
         <article class="experience">
             <p><strong>Junior Moderator, Cheil Worldwide; Warsaw, Poland — May 2016 - Jul 2016 & Jul 2015 - Aug 2015</strong></p>
             <ul>
-                <li>Managed Samsung Poland’s social media presence across Facebook, Twitter, and LinkedIn.</li>
+                <li>Managed Samsung Poland's social media presence across Facebook, Twitter, and LinkedIn.</li>
             </ul>
         </article>
     </section>
 
+    <script src="script.js"></script>
 </body>
 </html>
